<resources>
    <string name="app_name">Entrada Universitaria</string>
    <string name="titulo">Entrada Universitaria</string>
    <string name="uno"> HISTORIA</string>
    <string name="dos"> DEFENSA DE MONOGRAFIAS</string>
    <string name="tres"> ELECCION ÑUSTA UNIVERSITARIA</string>
    <string name="cuatro"> ROL DE INGRESO ENTRADA</string>
    <string name="cinco"> ROL DE INGRESO ENTRADA</string>
    <string name="seis"> GALERIA DE IMAGENES</string>
    <string name="siete"> ABOUT</string>
    <string name="lista">Fraternidad</string>
    <string name="listauno">Fecha de creacion</string>
    <string name="parametro">Puntos de Evalucion</string>
    <string name="p">  1.Presentacion</string>
    <string name="p1"> 2.Administracion de tiempo</string>
    <string name="p2"> 3.Organizacion</string>
    <string name="p3"> 4.Exposicion</string>
    <string name="p4"> 5.Didactica</string>
    <string name="p5"> 6.Dominio del tema</string>
    <string name="p6"> 7.Respuesta a las preguntas</string>
    <string name="p7"> 8.Triptico</string>
    <string name="cap"> Creada en 1969 por los hermanos Estrada</string>
    <string name="cap1"> Pacheco quienes se inspiraron en el per-</string>
    <string name="cap2"> sonaje del Caporal de la Saya.</string>
    <string name="cap3"> El caporal era el capataz de los esclavos</string>
    <string name="cap4"> negros traidos a la zona altiplanica duran-</string>
    <string name="cap5"> te la epoca de la Colonia.</string>
    <string name="dia"> Tiene origen en el siglo XII representaba</string>
    <string name="dia1"> la lucha entre el bien y el mal donde la</string>
    <string name="dia2"> figura del Arcangel Miguel y sus angeles</string>
    <string name="dia3"> batallaron con las fuerzas del mal repre-</string>
    <string name="dia4"> sentado por Lucifer y sus demonios.Los</string>
    <string name="dia5"> otros mitos creadores revelan la relación</string>
    <string name="dia6"> entre el Chiru-Chiru y la virgen del Socavon.</string>
    <string name="mor">  La Morenada es una danza cuyos orígenes</string>
    <string name="mor1"> se remontan a los tiempos de la coloni-</string>
    <string name="mor2"> zacion española.Otros afirman que la</string>
    <string name="mor3"> Morenada nace de la inspiración de los</string>
    <string name="mor4"> esclavos africanos que moraban en el al-</string>
    <string name="mor5"> tiplano y que eran sometidos a trabajos</string>
    <string name="mor6"> de la minería.</string>
    <string name="tin">  El Tinku es un ritual y una danza folklórica</string>
    <string name="tin1"> que se realiza en norte de Potosí - Bolivia.</string>
    <string name="tin2"> El significado de la palabra Tinku en quechua</string>
    <string name="tin3"> es "encuentro" y en aymara es "ataque físico".</string>
    <string name="tin4"> El Tinku es originario de la región en la que </string>
    <string name="tin5"> habitan los Laymes y Jukumanis.</string>
    <string name="rei"> De la participacion de las candidatas : </string>
    <string name="rei1"> I.Cada fraternidad podra elegir una represen-</string>
    <string name="rei2"> tante que pertenezca a una carrera, facultad</string>
    <string name="rei3"> para concursar en la eleccion bajo estricta</string>
    <string name="rei4"> observacion de los siguientes criterios:</string>
    <string name="rei5"> a) Ser estudiante regular de la UMSA(presen-</string>
    <string name="rei6"> tando la matricula de la gestion),Docente o</string>
    <string name="rei7"> Administrativo(presentando la ultima boleta</string>
    <string name="rei8"> de pago).</string>
    <string name="rei9"> b) No haber sido coronada como ñusta uni-</string>
    <string name="rei10"> versitaria en las gestiones anteriores.</string>
    <string name="rei11"> II.No es obligatorio a las fraternidades pre-</string>
    <string name="rei12"> sentar candidatas ni concursar en esta eleccion.</string>
    <string name="rei13"> III.Si la fraternidad presenta una candidata </string>
    <string name="rei14"> el delegado de esta frat. debera colaborar en</string>
    <string name="rei15"> la organizacion del evento.</string>
    <string name="nro"> Nro.</string>
    <string name="fraternidad"> Fraternidad</string>
    <string name="ingreso"> Hora :</string>
    <string name="abo"> Datos de Contacto</string>
    <string name="about"> Nombre: Noemi Stefany</string>
    <string name="ab">            Mamani Chavez</string>
    <string name="about1"> Correo: noemiinfo45@gmail.com</string>
    <string name="about2"> Celular : 76550497</string>
    <string name="about3"> Descripcion de la Aplicacion :</string>
    <string name="about4"> Esta aplicacion muestra las activi-</string>
    <string name="about5"> dades a desarrollarse de la 30 ver-</string>
    <string name="about6"> sion de la Entrada Universitaria - </string>
    <string name="about7"> UMSA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
