<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo"
            android:alpha="1"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei1"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei2"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei3"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei4"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rei5"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/parametro"
                    android:layout_marginLeft="16sp"
                    android:textStyle="italic"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei6"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei7"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei8"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei9"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei10"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei11"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei12"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei13"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei14"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rei15"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/parametro"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rei"
                    />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>

