<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miramicodigo.prueba_proyecto.ParametrosFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parametro"
        android:textSize="@dimen/alto2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/primary_text"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:layout_marginTop="45dp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p4"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p5"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p6"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p7"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="25sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</FrameLayout>
