<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miramicodigo.prueba_proyecto.ParametrosFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor"
            android:layout_marginTop="32dp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor1"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor2"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor3"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor4"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor5"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mor6"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/morenada"
            />
    </LinearLayout>

</FrameLayout>
