<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_lista">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abo"
                android:layout_marginTop="32dp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:paddingLeft="80dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about3"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about4"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about5"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about6"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about7"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/tamaño2"
                android:layout_marginLeft="16sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
