<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miramicodigo.prueba_proyecto.ParametrosFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap"
            android:layout_marginTop="32dp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap1"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap2"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap3"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap4"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap5"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/parametro"
            android:layout_marginLeft="16sp"
            android:textStyle="italic"
            />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/cap_imagen"
           />
    </LinearLayout>

</FrameLayout>
