<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_lista">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nro"
    android:textSize="@dimen/item"
    android:textColor="@color/primary_text"
    android:layout_marginLeft="12dp"
    android:textStyle="bold"
    android:id="@+id/tvNro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fraternidad"
        android:textSize="@dimen/item"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="12dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/tvFraternidad"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingreso"
        android:textSize="@dimen/item"
        android:textColor="@color/primary_text"
        android:layout_marginLeft="12dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:id="@+id/tvHora"/>
    </LinearLayout>

</LinearLayout>